--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Arrow Theme
 author: cspablocortez
 url: "https://cspablocortez.github.io"                             # your domain name
-baseurl: "/arrow-jekyll-theme"                         # leave blank if hosted at the root
+baseurl: ""                         # leave blank if hosted at the root
 timezone: America/Los_Angeles
 description: >-
   Arrow is a text-first Jekyll theme featuring minimal CSS 
@@ -10,3 +10,7 @@ description: >-
   
 plugins:
   - jekyll-feed
+  - jekeyll-seo
+  
+exclude:
+  - devlog.md
